<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_sign_up_title"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup_case"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_app_name"
                style="@style/TextViewLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_sign_up_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_56dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                app:cardElevation="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_name">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="@dimen/margin_16dp" />

                    <View
                        android:id="@+id/v_seperator_name"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@+id/edt_name"
                        android:background="@color/colorGrey" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/v_seperator_name"
                        android:background="@null"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/margin_16dp" />

                    <View
                        android:id="@+id/v_seperator_email"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@+id/edt_email"
                        android:background="@color/colorGrey" />


                    <EditText
                        android:id="@+id/edt_mob_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/v_seperator_email"
                        android:background="@null"
                        android:hint="@string/mob_no"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="@dimen/margin_16dp" />

                    <View
                        android:id="@+id/v_seperator_mob"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@+id/edt_mob_no"
                        android:background="@color/colorGrey" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/v_seperator_mob"
                        android:background="@null"
                        android:hint="@string/passw"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/margin_16dp" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_sign_up">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/margin_16dp"
                    android:text="@string/signup"
                    android:textColor="@color/colorPrimary" />


            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_btn_sign_up">

                <TextView
                    android:id="@+id/txt_alraedt_hv_accnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/allready_have_an_account"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_alraedt_hv_accnt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
